--- a/AppForeignExchange/AppForeignExchange/Resources/Resource.resx
+++ b/AppForeignExchange/AppForeignExchange/Resources/Resource.resx
@@ -141,6 +141,9 @@
   <data name="Loading" xml:space="preserve">
     <value>Loading rates…</value>
   </data>
+  <data name="Message" xml:space="preserve">
+    <value>Ready to convert</value>
+  </data>
   <data name="Ready" xml:space="preserve">
     <value>Ready to convert!</value>
   </data>
