--- a/AppForeignExchange/AppForeignExchange/Resources/Resource.fr.resx
+++ b/AppForeignExchange/AppForeignExchange/Resources/Resource.fr.resx
@@ -133,7 +133,7 @@
     <value>Vous devez saisir une valeur en montant.</value>
   </data>
   <data name="Convert" xml:space="preserve">
-    <value>Convertir</value>
+    <value>¡Prêt à se convertir!</value>
   </data>
   <data name="Error" xml:space="preserve">
     <value>Erreur</value>
