--- a/AppForeignExchange/AppForeignExchange/Resources/Resource.pt.resx
+++ b/AppForeignExchange/AppForeignExchange/Resources/Resource.pt.resx
@@ -132,14 +132,23 @@
   <data name="AmountValidation" xml:space="preserve">
     <value>Você deve inserir um valor em quantidade.</value>
   </data>
+  <data name="Connection" xml:space="preserve">
+    <value>Verifique suas configurações de internet. </value>
+  </data>
   <data name="Convert" xml:space="preserve">
     <value>¡Pronto para converter!</value>
   </data>
   <data name="Error" xml:space="preserve">
     <value>Erro</value>
   </data>
+  <data name="LoadedInternet" xml:space="preserve">
+    <value>Taxas carregadas da internet.</value>
+  </data>
   <data name="Loading" xml:space="preserve">
     <value>Aceitar</value>
+  </data>
+  <data name="NoConnection" xml:space="preserve">
+    <value>Verifique a sua conexão com a internet</value>
   </data>
   <data name="Ready" xml:space="preserve">
     <value>Taxas de carregamento...</value>
