--- a/AppForeignExchange/AppForeignExchange/Resources/Resource.es.resx
+++ b/AppForeignExchange/AppForeignExchange/Resources/Resource.es.resx
@@ -144,6 +144,9 @@
   <data name="LoadedInternet" xml:space="preserve">
     <value>Divisas cargadas desde internet.</value>
   </data>
+  <data name="LoadedLocal" xml:space="preserve">
+    <value>Divisas cargadas desde datos local.</value>
+  </data>
   <data name="Loading" xml:space="preserve">
     <value>Cargando monedas…</value>
   </data>
