--- a/AppForeignExchange/AppForeignExchange/Resources/Resource.fr.resx
+++ b/AppForeignExchange/AppForeignExchange/Resources/Resource.fr.resx
@@ -144,6 +144,9 @@
   <data name="LoadedInternet" xml:space="preserve">
     <value>Taux chargés sur internet.</value>
   </data>
+  <data name="LoadedLocal" xml:space="preserve">
+    <value>Taux chargés sur datos local.</value>
+  </data>
   <data name="Loading" xml:space="preserve">
     <value>Tarifs de chargement ...</value>
   </data>
