--- a/AppForeignExchange/AppForeignExchange/Resources/Resource.pt.resx
+++ b/AppForeignExchange/AppForeignExchange/Resources/Resource.pt.resx
@@ -144,6 +144,9 @@
   <data name="LoadedInternet" xml:space="preserve">
     <value>Taxas carregadas da internet.</value>
   </data>
+  <data name="LoadedLocal" xml:space="preserve">
+    <value>Taxas carregadas da dados locais.</value>
+  </data>
   <data name="Loading" xml:space="preserve">
     <value>Aceitar</value>
   </data>
