--- a/AppForeignExchange/AppForeignExchange/Resources/Resource.resx
+++ b/AppForeignExchange/AppForeignExchange/Resources/Resource.resx
@@ -144,6 +144,9 @@
   <data name="LoadedInternet" xml:space="preserve">
     <value>Rates loaded from internet.</value>
   </data>
+  <data name="LoadedLocal" xml:space="preserve">
+    <value>Rates loaded from local data.</value>
+  </data>
   <data name="Loading" xml:space="preserve">
     <value>Loading rates…</value>
   </data>
